# algorithmic-progress

./: .gitignore  README.md  pyproject.toml  setup.py  train.py
conf/: config.yaml
data/train/: enwik8_00.txt  enwik8_01.txt  enwik8_02.txt  enwik8_03.txt  enwik8_04.txt  enwik8_05.txt  enwik8_06.txt  enwik8_07.txt  enwik8_08.txt  enwik8_09.txt  enwik8_10.txt  enwik8_11.txt  enwik8_12.txt  enwik8_13.txt  enwik8_14.txt  enwik8_15.txt  enwik8_16.txt  enwik8_17.txt  enwik8_18.txt  enwik8_19.txt  enwik8_20.txt  enwik8_21.txt  enwik8_22.txt  enwik8_23.txt  enwik8_24.txt  enwik8_25.txt  enwik8_26.txt  enwik8_27.txt  enwik8_28.txt  enwik8_29.txt  enwik8_30.txt  enwik8_31.txt  enwik8_32.txt  enwik8_33.txt  enwik8_34.txt  enwik8_35.txt  enwik8_36.txt  enwik8_37.txt  enwik8_38.txt  enwik8_39.txt
eval/: plot_benchmarks.py  run_benchmarks.py  run_benchmarks_modal.py
runs/: eval_20251011-142703.json
